--- a/beanmatchers/pom.xml
+++ b/beanmatchers/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ua.lviv.javaclub</groupId>
-  <artifactId>c</artifactId>
+  <artifactId>beanmatchers</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Archetype - beanmatchers</name>
-  <url>http://maven.apache.org</url>
+  <name>Lviv JavaClub - beanmatchers</name>
+  <url>https://www.javaclub.lviv.ua/</url>
 
   <dependencies>
     <dependency>
